--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,5 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+one:
+  title: MyString1
+  descrption: MyText1
+  image_url: kniha.jpg
+  price: 9.99
+
+two:
+  title: MyString2
+  descrption: MyText2
+  image_url: kniha.jpg
+  price: 9.99
+
 ruby:
   title: Programming Ruby 1.9
   descrption: 
@@ -7,4 +19,4 @@ ruby:
     language out there. If you need to get working programs
     delivered fast, you should add Ruby to your toolbox.
   price: 49.50
-  image_url: kniha.png
+  image_url: ruby.png
